--- a/style/common.less
+++ b/style/common.less
@@ -119,5 +119,25 @@ body {
 			border-color: #fff;
 		}
 	}
+	&.buttonBordered {
+		border: 1px solid #DBDBDB;
+		border-radius: 5px;
+		padding: 0.8em 1em;
+		font-weight: normal;
+		line-height: 1;
+		color: @color2;
+		i {
+			padding-left: 0.1em;
+			font-size: 1.4em;
+			color: #ff6332;
+			vertical-align: middle;
+			line-height: 0;
+			display: inline-block;
+			margin-top: -0.1em;
+		}
+		&:hover {
+			background-color: #dbdbdb;
+		}
+	}
 }
 
