--- a/style/common.less
+++ b/style/common.less
@@ -79,12 +79,12 @@ body {
 	&.buttonOrange {
 		cursor: pointer;
 		color: #fff;
-		font-size: 1.4em;
+		font-size: 1.2em;
 		border-color: #ff6332;
 		background-color: #ff6332;
-		box-shadow: 0 6px 0 0 #d0481d;
+		box-shadow: 0 4px 0 0 #d0481d;
 		border-width: 0.15em;
-		padding: 0.4em 1.4em;
+		padding: 0.75em 1.4em 0.75em 2em;
 		position: relative;
 		font-weight: normal;
 		text-transform: none;
@@ -95,7 +95,7 @@ body {
 		}
 
 		&:hover {
-			box-shadow: 0 4px 0 0 #d0481d;
+			box-shadow: 0 2px 0 0 #d0481d;
 			top: 2px;
 		}
 
