--- a/style/guide.less
+++ b/style/guide.less
@@ -535,7 +535,9 @@ section.sectionReady {
 	}
 
 	.button {
-		font-size: 1.3em;
+		font-size: 1em;
+		padding: 0.6em 2em 0.6em 3em;
+		text-transform: uppercase;
 		display: block;
 	}
 }
