--- a/style/setup.less
+++ b/style/setup.less
@@ -271,6 +271,7 @@
 		font-size: 12px;
 		display: flex;
 		align-items: center;
+		text-decoration: none;
 		i {
 			margin-right: 0.4rem;
 			font-size: 2.2em;
