--- a/style/congrats.less
+++ b/style/congrats.less
@@ -251,11 +251,25 @@
 			font-size: 0.8em;
 			color: rgba(0, 0, 0, 0.3);
 		}
+		a.gotoLink {
+			position: absolute;
+			left: 0;
+			top: 1px;
+			z-index: 1;
+			width: 100%;
+			height: 97%;
+			background-color: transparent;
+			transition: background-color 0.3s;
+			&:hover {
+				background-color: rgba(255,255,255,0.5);
+			}
+		}
 		li {
 			padding: 25px 0;
 			display: flex;
 			align-items: center;
 			justify-content: space-between;
+			position: relative;
 			&:not(:last-child) {
 				border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 			}
