--- a/style/style.css
+++ b/style/style.css
@@ -1831,6 +1831,20 @@ section.sectionReady .button {
   font-size: 0.8em;
   color: rgba(0, 0, 0, 0.3);
 }
+.congratsPage .setupList a.gotoLink {
+  position: absolute;
+  left: 0;
+  top: 1px;
+  z-index: 1;
+  width: 100%;
+  height: 97%;
+  background-color: transparent;
+  -webkit-transition: background-color 0.3s;
+  transition: background-color 0.3s;
+}
+.congratsPage .setupList a.gotoLink:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+}
 .congratsPage .setupList li {
   padding: 25px 0;
   display: -webkit-box;
@@ -1842,6 +1856,7 @@ section.sectionReady .button {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  position: relative;
 }
 .congratsPage .setupList li:not(:last-child) {
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
