--- a/style/setup.less
+++ b/style/setup.less
@@ -42,10 +42,11 @@
 				justify-content: space-between;
 				align-items: center;
 			}
-			h2 {
+			h1 {
 				color: #838383;
 				font-size: 1.8em;
 				font-weight: 500;
+				margin: 0;
 			}
 			.paginate {
 				list-style: none;
@@ -167,7 +168,7 @@
 			border-color: #000;
 			.card-header {
 				border-bottom-color: transparent !important;
-				h3 {
+				h2 {
 					font-size: 25px;
 				}
 				&:after {
@@ -185,7 +186,7 @@
 		align-items: center;
 		justify-content: space-between;
 		transition: border-color 0.5s;
-		h3 {
+		h2 {
 			color: rgba(0, 0, 0, 1);
 			font-size: 20px;
 			transition: font-size 0.4s;
@@ -571,6 +572,7 @@
 	}
 	.btnAdvancedSettings {
 		display: block;
+		color: #fff;
 		background: #549d90;
 		border-color: #549d90;
 		text-align: left;
