--- a/style/style.css
+++ b/style/style.css
@@ -1583,7 +1583,7 @@ section.sectionReady .button {
   content: '';
   position: absolute;
   width: 40%;
-  height: 20%;
+  height: 10vw;
   right: 0;
   top: 0;
   -webkit-transform: skew(-40deg) translateX(40%);
@@ -1593,13 +1593,37 @@ section.sectionReady .button {
   padding-bottom: 100px;
 }
 .congratsPage .controlBox {
-  -webkit-box-shadow: 1px 3px 10px rgba(0, 0, 0, 0.1);
-          box-shadow: 1px 3px 10px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 1px 3px 10px rgba(0, 0, 0, 0.06);
+          box-shadow: 1px 3px 10px rgba(0, 0, 0, 0.06);
   background-color: #fff;
   border: 1px solid #e4e4e4;
   border-radius: 5px;
-  padding: 30px;
+  padding: 30px 30px 2.8em;
   margin-top: 50px;
+  position: relative;
+}
+.congratsPage .controlBox .gotoDashboard {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  background: #E4FFF0;
+  border-top: 1px solid #04A74C;
+  border-radius: 0;
+  color: #04A74C;
+  padding: 0.6em 1em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.congratsPage .controlBox .gotoDashboard:hover {
+  background: #c9fbe0;
 }
 .congratsPage .controlBox .btn-outline-dark {
   margin-top: 1em;
@@ -1617,8 +1641,8 @@ section.sectionReady .button {
   vertical-align: middle;
 }
 .congratsPage .otherContents {
-  -webkit-box-shadow: 1px 3px 10px rgba(0, 0, 0, 0.1);
-          box-shadow: 1px 3px 10px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 1px 3px 10px rgba(0, 0, 0, 0.06);
+          box-shadow: 1px 3px 10px rgba(0, 0, 0, 0.06);
   background-color: #fff;
   border: 1px solid #e4e4e4;
   border-radius: 5px;
@@ -1743,6 +1767,7 @@ section.sectionReady .button {
 .congratsPage .statusRep .head h2 {
   font-size: 42px;
   font-weight: bold;
+  line-height: 1.3;
 }
 .congratsPage .statusRep .head p {
   font-size: 22px;
@@ -1821,6 +1846,78 @@ section.sectionReady .button {
 }
 .congratsPage .statusRep .statusInfo span {
   font-size: 12px;
+}
+.congratsPage .setupContainer {
+  border-color: #000;
+  background-color: #fff;
+  margin-top: 0;
+  position: relative;
+  z-index: 2;
+}
+.congratsPage .setupContainer .card-header:after {
+  width: 15px;
+  height: 15px;
+  -webkit-transform: translateY(-50%) rotate(45deg);
+          transform: translateY(-50%) rotate(45deg);
+}
+.congratsPage .setupContainer .card-header.collapsed:after {
+  -webkit-transform: translateY(-50%) rotate(-45deg);
+          transform: translateY(-50%) rotate(-45deg);
+}
+.congratsPage h6.pausedRewardHead {
+  color: #549D90;
+}
+.congratsPage .setupItemContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+.congratsPage .setupItemList {
+  width: 48%;
+  border: 1px solid #C6C6C6;
+  border-radius: 3px;
+  padding: 30px;
+  margin-top: 20px;
+}
+.congratsPage .setupItemList .stepHead {
+  padding-right: 3.5em;
+}
+.congratsPage .setupItemList .stepHead h3 {
+  font-weight: normal;
+  margin: 0;
+}
+.congratsPage .setupItemList .stepHead h3,
+.congratsPage .setupItemList .stepHead p {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+.congratsPage .setupItemList .setupListBody > ul {
+  list-style: none;
+  padding: 0 4em 0 0;
+}
+.congratsPage .setupItemList .setupListBody li {
+  font-size: 14px;
+  padding-left: 1.8em;
+  position: relative;
+}
+.congratsPage .setupItemList .setupListBody li:before {
+  content: 'check';
+  font-family: "Material Icons";
+  position: absolute;
+  left: 0;
+  top: 0;
+  color: #28A08C;
+  font-size: 1.2em;
+  line-height: 1;
 }
 .congratsPage .setupList ul {
   list-style: none;
