--- a/style/setup.less
+++ b/style/setup.less
@@ -119,6 +119,7 @@
 	margin: 50px auto;
 	.setupSwiper-navigator {
 		padding: 25px 0;
+		margin: 0 25px;
 		border-top: 1px solid #ccc;
 		text-align: center;
 		> div {
@@ -176,6 +177,9 @@
 				}
 			}
 		}
+	}
+	.card-body {
+		padding: 1.25rem 0;
 	}
 	.card-header {
 		cursor: pointer;
@@ -286,20 +290,24 @@
 	}
 	.recommendFloater {
 		font-size: 12px;
-		color: #1b708e;
-		background-color: #e5eff5;
-		padding: 20px;
-		border-radius: 10px;
+		margin: 20px;
 		position: absolute;
 		right: 0;
 		top: 0;
-		width: 200px;
-		transform: translate(80%, 10%);
 		i.info {
-			position: absolute;
 			color: #1064ff;
+		}
+		.floaterTxt {
+			color: #1b708e;
+			background-color: #e5eff5;
+			padding: 20px;
+			border-radius: 10px;
+			position: absolute;
 			left: 0;
-			transform: translateX(-50%);
+			top: 0;
+			width: 190px;
+			transform: translate(15%, 0);
+
 		}
 	}
 	.greetingTemplate {
