--- a/style/setup.less
+++ b/style/setup.less
@@ -224,12 +224,27 @@
 		max-width: 500px;
 		margin: auto;
 		&.disabled {
-			.stepBody,
+			.upmarketing {
+				display: block;
+			}
+			.stepWrapper,
 			.stepFoot {
 				pointer-events: none;
 				opacity: 0.5;
 			}
 		}
+	}
+	.upmarketing {
+		position: absolute;
+		width: 100%;
+		left: 0;
+		border-radius: 5px;
+		padding: 10px;
+		text-align: center;
+		top: 0;
+		font-size: 14px;
+		color: #856404;
+		display: none;
 	}
 	.stepHead {
 		position: relative;
