--- a/style/setup.less
+++ b/style/setup.less
@@ -117,6 +117,14 @@
 	border: 1px solid #cecece;
 	border-radius: 5px;
 	margin: 50px auto;
+	em.error {
+		font-size: 11px;
+		color: red;
+		line-height: 1;
+		font-style: normal;
+		display: block;
+		padding-top: 5px;
+	}
 	.setupSwiper-navigator {
 		padding: 25px 0;
 		margin: 0 25px;
