--- a/style/style.css
+++ b/style/style.css
@@ -1001,6 +1001,14 @@ section.sectionReady .button {
   border-radius: 5px;
   margin: 50px auto;
 }
+.setupContainer em.error {
+  font-size: 11px;
+  color: red;
+  line-height: 1;
+  font-style: normal;
+  display: block;
+  padding-top: 5px;
+}
 .setupContainer .setupSwiper-navigator {
   padding: 25px 0;
   margin: 0 25px;
