--- a/style/overwrite-bootstrap.css
+++ b/style/overwrite-bootstrap.css
@@ -18,6 +18,9 @@
 .btn {
     border-radius: 0.5rem;
 }
+.btn.disabled {
+    pointer-events: none;
+}
 .btn-warning {
     background-color: var(--orange);
     border-color: var(--orange);
