--- a/style/setup.less
+++ b/style/setup.less
@@ -710,7 +710,7 @@
 	.modal-content {
 		border-radius: 15px;
 	}
-	&#skipModal {
+	&.modal-1 {
 		.modal-content {
 			padding: 50px;
 			text-align: center;
@@ -726,6 +726,18 @@
 				text-decoration: none;
 				opacity: 0.8;
 			}
+		}
+	}
+	&#sampleModal {
+		.modal-dialog {
+			max-width: 768px;
+		}
+		.modal-content {
+			padding: 10px;
+		}
+		img {
+			width: 100%;
+			border-radius: 15px;
 		}
 	}
 }
