update mom changes

--- a/style/setup.less
+++ b/style/setup.less
@@ -394,26 +394,26 @@
 			display: flex;
 			justify-content: space-between;
 			position: relative;
-			&:after,
-			&:before {
-				content: '';
-				width: 15px;
-				height: 15px;
-				border-color: #c6c6c6;
-				border-style: solid;
-				position: absolute;
-				top: 50%;
-			}
-			&:after {
-				right: 35px;
-				border-width: 1px 1px 0 0;
-				transform: translateY(-50%) rotate(45deg);
-			}
-			&:before {
-				left: 35px;
-				border-width: 1px 0 0 1px;
-				transform: translateY(-50%) rotate(-45deg);
-			}
+			// &:after,
+			// &:before {
+			// 	content: '';
+			// 	width: 15px;
+			// 	height: 15px;
+			// 	border-color: #c6c6c6;
+			// 	border-style: solid;
+			// 	position: absolute;
+			// 	top: 50%;
+			// }
+			// &:after {
+			// 	right: 35px;
+			// 	border-width: 1px 1px 0 0;
+			// 	transform: translateY(-50%) rotate(45deg);
+			// }
+			// &:before {
+			// 	left: 35px;
+			// 	border-width: 1px 0 0 1px;
+			// 	transform: translateY(-50%) rotate(-45deg);
+			// }
 			li {
 				width: 30%;
 				border: 1px solid #c6c6c6;
