--- a/style/overwrite-bootstrap.css
+++ b/style/overwrite-bootstrap.css
@@ -40,12 +40,12 @@
     border-color: var(--green);
     background-color: var(--green);
 }
-.setupSwiper .form-group {
+.fLabel.form-group {
     position: relative;
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
 }
-.setupSwiper .form-group label {
+.fLabel.form-group label {
     position: absolute;
     font-size: 0.7rem;
     background: #fff;
@@ -53,7 +53,7 @@
     margin: 0 0.5rem;
     transform: translateY(-50%);
 }
-.setupSwiper .form-group .input-group-prepend {
+.fLabel.form-group .input-group-prepend {
     color: #42A8E7;
     font-size: 0.8rem;
     position: absolute;
@@ -62,10 +62,10 @@
     align-items: center;
     justify-content: center;
 }
-.setupSwiper .form-group .input-group-prepend ~ input {
+.fLabel.form-group .input-group-prepend ~ input {
     padding: .375rem 0.5rem 0.375rem 1.6rem;
 }
-.setupSwiper .form-group input {
+.fLabel.form-group input {
     padding: .375rem 1.25rem;
 }
 .alert {
