--- a/style/style.css
+++ b/style/style.css
@@ -1424,6 +1424,9 @@ section.sectionReady .button {
 .themesBlock .card-body {
   padding: 0;
 }
+.themesBlock .previewImg {
+  width: 100%;
+}
 .themesBlock .popupSetup > div.row {
   padding: 30px;
 }
